--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -31,6 +31,11 @@ h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
 }
 
+.logo-main {
+    width: 100%;
+    max-width: 915px;
+}
+
 /* ------------------ GENERAL STYLES ------------------ */
 @font-face {
   font-family: "brankic";
