--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -99,16 +99,16 @@ h1, h2, h3, h4, h5, h6 {
   padding-bottom: 5px;
   border-bottom: 2px solid transparent;
   font-size: 12px;
-  color: #646464;
+  color: #EDEDED;
   font-weight: 700;
 }
 .navbar-nav > li > a:hover {
-  border-bottom: 2px solid #646464;
+  border-bottom: 2px solid #EDEDED;
   padding-bottom: 0;
   background-color: transparent;
 }
 .navbar-nav > li.active > a {
-  border-bottom: 2px solid #646464;
+  border-bottom: 2px solid #EDEDED;
   padding-bottom: 0;
   background-color: transparent;
 }
